@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US009

class ProductionManager {
}

class Client {
    id
    name
    vatin
    phoneNumber
    email
}

class Order {
    id
    orderDate
    deliveryDate
    price
}

enum ProcessState {
    state
}

class RawMaterial {
    id
    name
    description
    currentStock
    minimumStock
}


ProductionManager "1" -- "1..*" Order : complete >
ProductionManager "1" -- "1..*" Client : consult >
ProductionManager "1" -- "1..*" RawMaterial : update >
Order "*" -- "1" ProcessState : has >
Client "1" -- "*" Order : places >

@enduml
